syntax = "proto3";

option java_package = "com.ymt.grpc.common";

service HelloService {
    rpc sayHello (HelloRequest) returns (HelloResponse) {
    }
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}